welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: ';' expected but 'return' found.
		}return false
                 ^